--- a/News_Portal/templates/news_list.html
+++ b/News_Portal/templates/news_list.html
@@ -5,6 +5,13 @@ Posts
 {% block content %}
   <h1>Все новости</h1>
   <h3> Количество статей: {{news|length}} </h3>
+  {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
+   <form action="" method="get">
+       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+       {{ filterset.form.as_p }}
+       {# Добавим кнопку отправки данных формы #}
+       <input type="submit" value="Найти" />
+   </form>
 {% if news  %}
 <table>
   <tr>
@@ -23,4 +30,23 @@ Posts
 {% else %}
 <h2>Публикаций нет!</h2>
 {% endif %}
-{% endblock %}
+{% if page_obj.has_previous %}
+       <a href="?page=1">1; Первая</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {# Информация о текущей странице #}
+   {{ page_obj.number }}
+
+   {# Информация о следующих страницах #}
+   {% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+{% endblock content %}
