--- a/News_Portal/templates/news_list.html
+++ b/News_Portal/templates/news_list.html
@@ -5,13 +5,6 @@ Posts
 {% block content %}
   <h1>Все новости</h1>
   <h3> Количество статей: {{news|length}} </h3>
-  {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
-   <form action="" method="get">
-       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
-       {{ filterset.form.as_p }}
-       {# Добавим кнопку отправки данных формы #}
-       <input type="submit" value="Найти" />
-   </form>
 {% if news  %}
 <table>
   <tr>
@@ -31,7 +24,7 @@ Posts
 <h2>Публикаций нет!</h2>
 {% endif %}
 {% if page_obj.has_previous %}
-       <a href="?page=1">1; Первая</a>
+       <a href="?page=1">1</a>
        {% if page_obj.previous_page_number != 1 %}
            ...
            <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
