--- a/News_Portal/templates/protect/index.html
+++ b/News_Portal/templates/protect/index.html
@@ -6,6 +6,6 @@
 
 <button> <a href="accounts/logout/">Выйти</a> </button>
 {% if is_not_premium %}
-<button> <a href="sign/upgrade/"> Хочу Premium!</a> </button>
+<button> <a href="sign/upgrade/"> Стать автором!</a> </button>
 {% endif %}
 {% endblock %}
