--- a/News_Portal/templates/notification_created.html
+++ b/News_Portal/templates/notification_created.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>{{ post.title_post }}</h2>
+    <h2>Здравствуй, {{ user.username}}</h2>
     <p>{{ post.text_post|truncatechars:50 }}</p>
     <p> Здравствуй, {{user.username}}. Новая статья в твоём любимом разделе!}} </p>
 </body>
