--- a/News_Portal/templates/notification_created.html
+++ b/News_Portal/templates/notification_created.html
@@ -2,11 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Новая статья</title>
 </head>
 <body>
-    <h2>Здравствуй, {{ user.username}}</h2>
+    <h2>Здравствуй, {{  subscriber.username }}</h2>
+    <p>Новая статья в твоём любимом разделе!</p>
+    <h3>{{ post.title_post }}</h3>
     <p>{{ post.text_post|truncatechars:50 }}</p>
-    <p> Здравствуй, {{user.username}}. Новая статья в твоём любимом разделе!}} </p>
+    <p> Чтобы прочитать статью полностью, перейди по <a href="{{ post.get_absolute_url }}">the link</a> </p>
 </body>
 </html>
