--- a/News_Portal/templates/weekly_notification_created.html
+++ b/News_Portal/templates/weekly_notification_created.html
@@ -8,7 +8,7 @@
         <ul>
         {% for post in posts %}
             <li>
-                <a href="{{ post.get_absolute_url }}">{{ post.title_post }}</a>
+                <a href="{{ link }}{{ post.get_absolute_url }}">{{ post.title_post }}</a>
                 <p>{{ post.text_post|truncatechars:50 }}</p>
             </li>
         {% endfor %}
